# snake-playground-pro

./: .dockerignore  .env.production.template  .gitignore  AGENTS.md  DOCKER-README.md  Dockerfile  README.md  combined.nginx.conf  combined.supervisord.conf  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  docker-dev.sh  index.html  render.yaml  tailwind.config.ts  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .env  .env.docker  Dockerfile  README.md  main.py  openapi.yaml  pyproject.toml  snake_playground.db  verify_api.py
backend/alembic/: env.py
backend/alembic/versions/: eb1c3d66cbff_initial_schema.py
backend/app/: __init__.py  config.py  database.py  database_seed.py  db_inspect.py  dependencies.py
backend/app/models/: __init__.py  auth.py  db_models.py  leaderboard.py  live.py  user.py
backend/app/repositories/: __init__.py  leaderboard_repository.py  token_repository.py  user_repository.py
backend/app/routers/: __init__.py  auth.py  leaderboard.py  live.py  users.py
backend/app/services/: __init__.py  auth.py  database.py  database_service.py  live_player_service.py
backend/app/tasks/: __init__.py  cleanup.py
backend/scripts/: migrate_sqlite_to_postgres.py  start-backend.sh
backend/tests/: __init__.py  conftest.py  test_auth.py  test_leaderboard.py  test_live.py  test_users.py
frontend/: .dockerignore  .env.development  .env.example  .env.production  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: index.css
src/: App.tsx
(+22 files in other folders)
